xalanj commit : building via build.bat, now uses xercesImpl.jar and xml-apis.jar from build.xml file and not via jvm java.endorsed.dirs system property